Add template of a release note

--- a/deploy/crds/takitake_v1alpha1_releasenote_crd.yaml
+++ b/deploy/crds/takitake_v1alpha1_releasenote_crd.yaml
@@ -9,6 +9,8 @@ spec:
     listKind: ReleaseNoteList
     plural: releasenotes
     singular: releasenote
+    shortNames:
+    - rn
   scope: Namespaced
   subresources:
     status: {}
